Changes since labca_2
	2007/5/23 (TS):
	- Changed implementation of EzcaPendEvent(). There is really no need
	  for ca_pend_event() anymore with multithreaded CA :-). This means
	  that we can keep a count of outstanding operations and let EzcaPendEvent
	  simply ca_flush_io() and block on a semaphore (occasional timeout so
	  that we can poll the X loop and check for Ctrl-C). As requests are
	  answered a CA background task executes the callbacks which decrement
	  the 'outstanding' counter and eventually post to 'done' semaphore.
	  --> lcaXXX calls NO LONGER take multiples of ezcaTimeout to complete :-)
	  but complete as soon as possible (w/o having to resort to a high CA poll
	  rate).
	2007/5/22 (TS):
    - labca now 'throws' (ezca) error codes when an error occurs
      (via mexErrMsgIdAndTxt / Scierror) that can be picked up
      by the application via catch + lasterror.
    - lcaNewMonitorValue() now 'throws' errors for all cases that
      in previous versions returned < 0 flag values. I.e., if
      lcaNewMonitorValue() completes successfully then it returns either
      0 or 1.
Changes since labca_2_1_beta (T.S):
    2007/5/9 (TS):
	- use c99 types int8_t, int16_t, int32_t rather than char, short, int.
	  (multiEzca.c; see also change made 2006/9/1).
	2007/5/8 (TS):
	- lcaPutNoWait() would not flush out commands (thanks to Greg Portman
      for reporting).
	2007/4/11 (TS):
	- scilab got stuck when initializing labca in non-windowing mode (-nw).
	  This was because we still checked the X loop in ctrlC-polled.c.
	  Now we use checkevts_() to find out if we have should work the X loop.
	2007/4/10 (Jim Sebek):
	- attempts to mcc-compile matlab scripts that use labCA had failed
	  apparently because the help (.m) files are in the same directory
	  as the respective mex object files.
	  Jim found a work-around that tests if a compilation is in progress
	  and which skips labca initialization if this is the case.
	2006/12/19 (TS):